force-app/main/default/objects/ccrz__E_Cart__c/ccrz__E_Cart__c.object-meta.xml
<CustomObject>
    <description>The shopping cart header</description>
    <label>CC Cart</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Cart Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Carts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>