force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__ActiveCart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ActiveCart__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a new Cart is created, the cart is active by default. Whenever, we want to make anyother cart active, the current active cart should be deactivated</description>
    <label>Active Cart</label>
    <type>Checkbox</type>
</CustomField>