force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__AdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AdjustmentReason__c</fullName>
    <description>Optional reason text for the Adjustment Amount field. This information is captured here and transferred to order during place-order call.</description>
    <label>Adjustment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>