force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BuyerEmail__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerEmail__c</fullName>
    <description>Buyer&apos;s email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>