force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BuyerFirstName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerFirstName__c</fullName>
    <description>Buyer&apos;s first name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>