force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BuyerLastName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerLastName__c</fullName>
    <description>Buyer&apos;s last name</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>