force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BuyerPhone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerPhone__c</fullName>
    <description>Buyer&apos;s phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>