force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__CartId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartId__c</fullName>
    <description>This is an external Id for data loading.</description>
    <externalId>true</externalId>
    <label>Cart Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>