force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__Contact__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contact of the User that this cart was created for.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CC Carts</relationshipLabel>
    <relationshipName>CC_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>