force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__ContractId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContractId__c</fullName>
    <description>This holds the Contract Id,if payment method is Contract</description>
    <label>Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>