force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__EncryptedId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EncryptedId__c</fullName>
    <description>Semi-random UUID used to refer to the order in URLs.</description>
    <label>Encrypted Id</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>