force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Name__c</fullName>
    <defaultValue>&quot;Shopping Cart&quot;</defaultValue>
    <description>Cart&apos;s Name</description>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>