force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PaymentMethod__c</fullName>
    <description>The payment method defined in E_PaymentDetail__c.Payment_Method__c.</description>
    <label>Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>