force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__PONumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PONumber__c</fullName>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>