force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequestDate__c</fullName>
    <description>Request date captured during the checkout process.</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>