force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__SessionId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SessionId__c</fullName>
    <description>SFDC current user&apos;s session id.(Deprecated)</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>