force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TaxExemptFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxExemptFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the order was tax exempt. This information is captured in cart and transferred to order during place-order call.</description>
    <label>TaxExemptFlag</label>
    <type>Checkbox</type>
</CustomField>