force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalAmount__c</fullName>
    <formula>ccrz__ShipAmount__c + ccrz__SubtotalAmount__c + ccrz__TaxAmount__c +  ccrz__ShipDiscountAmount__c  +  ccrz__AdjustmentAmount__c + ccrz__TotalSurcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>