force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalDiscount__c</fullName>
    <description>Total Discount</description>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>