force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>ccrz__E_CartItem__c.ccrz__Quantity__c</summarizedField>
    <summaryForeignKey>ccrz__E_CartItem__c.ccrz__Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>