force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TotalSurcharge__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalSurcharge__c</fullName>
    <description>Misc. Charges applied to the cart.  Not taxes and not shipping.</description>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>