force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__ValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ValidationStatus__c</fullName>
    <description>Indicates the validation status for the cart.  Keeping as a free text field for flexibility in use with remote actions.</description>
    <label>Validation Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>