force-app/main/default/objects/ccrz__E_Cart__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <formula>ccrz__Contact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>