force-app/main/default/objects/ccrz__E_Cart__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <formula>ccrz__Contact__r.Id</formula>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>