force-app/main/default/objects/ccrz__E_Cart__c/fields/Default_Unloading_Point__c.field-meta.xml
<CustomField>
    <fullName>Default_Unloading_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Unloading Point</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Carts (Default Unloading Point)</relationshipLabel>
    <relationshipName>CC_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>