force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Attention_To_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Attention_To_Number__c</fullName>
    <label>Attention To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>