force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_AttentionTo__c.field-meta.xml
<CustomField>
    <fullName>EC_AttentionTo__c</fullName>
    <description>Attention To Field - to capture comments on Order Info Page</description>
    <label>Attention To</label>
    <length>55</length>
    <type>Text</type>
</CustomField>