force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Cart_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>EC_Cart_Email_Subject__c</fullName>
    <label>Cart Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>