force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Delivery_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>EC_Delivery_Lead_Time__c</fullName>
    <label>Delivery Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>