force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Is_Requested_Date_Valid__c.field-meta.xml
<CustomField>
    <fullName>EC_Is_Requested_Date_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Requested Date Valid</label>
    <type>Checkbox</type>
</CustomField>