force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Punchout_Buyer_Cookie__c.field-meta.xml
<CustomField>
    <fullName>EC_Punchout_Buyer_Cookie__c</fullName>
    <label>Buyer Cookie</label>
    <length>90</length>
    <type>Text</type>
</CustomField>