force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_PunchOut_CallBack_URL__c.field-meta.xml
<CustomField>
    <fullName>EC_PunchOut_CallBack_URL__c</fullName>
    <label>Call Back URL</label>
    <type>Url</type>
</CustomField>