force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_PurchasedWishlist__c.field-meta.xml
<CustomField>
    <fullName>EC_PurchasedWishlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchased Wishlist</label>
    <type>Checkbox</type>
</CustomField>