force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>EC_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Carts (Ship To Account)</relationshipLabel>
    <relationshipName>CC_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>