force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>EC_Sold_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SoldTo Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Carts (SoldTo Account)</relationshipLabel>
    <relationshipName>CC_Carts1</relationshipName>
    <type>Lookup</type>
</CustomField>