force-app/main/default/objects/ccrz__E_Cart__c/fields/EC_User_Comments__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Comments__c</fullName>
    <description>This field will be used to store user comments while emailing the cart</description>
    <label>User Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>