force-app/main/default/objects/ccrz__E_Cart__c/fields/OrderRushEmail__c.field-meta.xml
<CustomField>
    <fullName>OrderRushEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenever the Order type is Rush,we can show this field in order email</description>
    <label>Rush</label>
    <type>Checkbox</type>
</CustomField>